--- a/Genshin-Wiki/vercel.json
+++ b/Genshin-Wiki/vercel.json
@@ -1,14 +1,8 @@
 {
-    "functions": {
-      "api/server.js": {
-        "memory": 1024,
-        "includeFiles": "src/genshin.json"
-      }
-    },
-    "rewrites": [
+  "rewrites": [
       {
-        "source": "/(.*)",
-        "destination": "api/server.js"
+          "source": "/(.*)",
+          "destination": "/"
       }
-    ]
-  }
+  ]
+}
